[tool.poetry]
name = "aws-client"
version = "0.1.0"
description = "a simple api for aws"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = {extras = ["crt"], version = "^1.35.81"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false